# SmartGarageDoor

./: .editorconfig  .gitignore  .markdown-link-check.json  CLAUDE.md  README.md
.claude/: settings.json
.github/: annotation-ignores.txt  dependabot.yml
AndroidGarage/: .gitignore  ARCHITECTURE_PLAN.md  CHANGELOG.md  README.md  TESTING_REFERENCE.md  build.gradle  build.gradle.kts  config.properties  detekt.yml  gradle.properties  screen-viewmodel-exemptions.txt  settings.gradle  settings.gradle.kts  string-literal-exemptions.txt  test-coverage-exemptions.txt  ui-layer-graph-access-exemptions.txt  version.properties
AndroidGarage2/: .gitignore  build.gradle.kts  config.properties  settings.gradle.kts
Arduino_ESP32/: README.md
DoorSensor/: BlinkMorseCode.cpp  BlinkMorseCode.h  Debouncer.cpp  Debouncer.h  DoorSensor.ino  ServerApi.cpp  ServerApi.h  WiFiGet.h  WiFiGetMulti.cpp  WiFiGetMulti.h  secrets.h
GarageFirmware_ESP32/components/garage_http_client/: CMakeLists.txt
GarageFirmware_ESP32/components/garage_http_client/include/: garage_http_client.h  http_receive_buffer.h  https_post_request.h  root_ca.h
GarageFirmware_ESP32/components/garage_http_client/src/: fake_garage_http_client.c  garage_http_client.c  http_receive_buffer.c  https_post_request.c
GarageFirmware_ESP32/components/garage_server/: CMakeLists.txt
GarageFirmware_ESP32/components/garage_server/include/: garage_server.h  http_button_request.h  root_ca.h
GarageFirmware_ESP32/components/garage_server/src/: fake_garage_server.c  garage_server.c  http_button_request.c  https_post_request.c
(+2444 files in other folders)
