idf_component_register(
    SRCS
        "src/fake_garage_server.c"
        "src/garage_server.c"
        "src/https_post_request.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_http_client
        garage_config
        json
    EMBED_TXTFILES
        "server_root_cert.pem"
)
